# db_labs

./: pyproject.toml
backend/: README.md  pyproject.toml
backend/src/: config.py  main.py
backend/src/api/: dependencies.py  details.py  routers.py  tasks.py  workers.py
backend/src/models/: details.py  task_types.py  tasks.py  workers.py
backend/src/repositories/: details.py  workers.py  works.py
backend/src/schemas/: details.py  task_types.py  tasks.py  workers.py  works.py
backend/src/services/: details.py  tasks.py  workers.py  works.py
src/: init_db.py
src/api/: dependencies.py  details.py  routers.py  tasks.py  works.py
src/database/: database.py
src/models/: works.py
src/repositories/: task_types.py  tasks.py
src/schemas/: details.py  task_types.py  tasks.py  workers.py
src/services/: details.py  tasks.py
src/utils/: repository.py
