[project]
name = "db2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "asyncpg",
    "pydantic",
    "python-dotenv",
    "jinja2",
    "httpx",
    "aiofiles",
    "email-validator",
    "pydantic-settings",
    "greenlet",
    "sqlalchemy-utils"
]
